--- a/datos_centros_territoriales/index.html
+++ b/datos_centros_territoriales/index.html
@@ -1632,7 +1632,7 @@ Variación = ((nuevo - antiguo)/antiguo)*100
 <ul>
 <li><p><a href="https://transparencia.gob.es/">Portal de Transparencia.</a></p></li>
 <li><p><a href="htm">Instituto Nacional de Estadística (INE).</a></p></li>
-<li><p>Portales de datos de CCAA: Datos Estadísticos y Geoespaciales de Andalucía, Datos Abiertos de Castilla y León.</p></li>
+<li><p>Portales de datos de CCAA: Datos Estadísticos y Geoespaciales de Andalucía, Instituto Galego de Estatística (IGE), Instituto Cántabro de Estadística (ICANE), Datos Abiertos de Castilla y León.</p></li>
 <li><p><a href="https://ec.europa.eu/eurostat">Eurostat.</a></p></li>
 <li><p><a href="https://datacatalog.worldbank.org/home">Banco Mundial.</a></p></li>
 <li><p><a href="https://www.imf.org/en/Data">Fondo Monetario Internacional.</a></p></li>
